--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -18,7 +18,11 @@
     <title>Education News</title>
     <meta
       name="description"
-      content="A website for education related Q&A, news and for buying books."
+      content="A website for education related Posts, news and for buying books."
+    />
+    <meta
+      property="og:image"
+      content="/assets/icons/education-news-light-bg-512x512.png"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
